# legal-texts

./: .gitignore  README.md  TODO.md  import_docx.sh  import_docx_tb_content.sh  index.html  legal_text_processor.py  pagedlegaltext.css  passos.md  pyproject.toml  requirements.txt  scriptlauncher.yaml  webforms-general-conditions-es.html
.github/workflows/: build.yml
general-conditions/: ca.yaml  es.md  es.yaml  template.md  toc-generator.py
generators/web-pdf-indexed-conditions/: generator.py
indexed-tariff-specific-conditions/: ca.md  ca.yaml  es.md  es.yaml  eu.md  eu.yaml  ga.md  gl.md  gl.yaml  template.md
legaltexts/: cli.py  toc_generator.py  translate.py
legaltexts/i18n/: ca.yaml  es.yaml
